[omnibox-next] Fix spacing header issues.
See recording and screenshot in the bugs.

Fixed: b:473592121, b:471299095
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7405235
Commit-Queue: Teresa Mao <temao@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1565296}

--- a/ui/webui/resources/cr_components/composebox/contextual_entrypoint_and_carousel.css
+++ b/ui/webui/resources/cr_components/composebox/contextual_entrypoint_and_carousel.css
@@ -67,6 +67,10 @@
   flex-wrap: nowrap;
 }
 
+.context-menu-container:has(.contextual-chip) {
+  padding-bottom: var(--contextual-entrypoint-and-carousel-contextual-chip-padding-bottom);
+}
+
 :host([inputs-disabled_]) .upload-button {
   color: var(--color-composebox-upload-button-disabled);
 }
